# Project-Lutum-Veritas

./: .gitignore  ACADEMIC_DEEP_RESEARCH.md  ALL_PROMPTS_DUMP.md  ARCHITECTURE.md  BRAINSTORM.md  CODE_LAWS.md  HEADER-TEMPLATE.md  HEADER_TEMPLATE.txt  KNOWN_BUGS.md  LOGGING_ANALYSIS_DUMP.txt  NOTICE  PATCH_NOTES.md  README.md  RECURSIVE_PIPELINE.md  analyze_logging.py  build_backend.ps1  build_backend.spec  build_vanilla.ps1  count_comments.py  deep_question_pipeline.py  dev-start.ps1  lutum-backend.spec  pyproject.toml  start-backend.bat
Standalone Benchmark/: 01_query_to_sources_and_questions.py  02_answers_to_plan.py  03_plan_to_deep_research.py  README.md  _common.py
final_synthesis_backups/: README.md  synthesis_20260128_191317.md  synthesis_20260129_165327.md
lutum/: __init__.py
lutum-backend/: lutum-backend.spec  main.py  requirements.txt
lutum-backend/routes/: __init__.py  chat.py  research.py
lutum-backend/services/: __init__.py  lutum_service.py
lutum-desktop/: archive-build.ps1  index.html  package-lock.json  package.json
lutum-desktop/src/: App.css  App.tsx
lutum-desktop/src-tauri/: .gitignore  Cargo.toml  build_log.txt  nsis-hooks.nsh  tauri.conf.json
lutum/analyzer/: __init__.py  web_analyzer.py
lutum/core/: __init__.py  api_config.py  config.py  exceptions.py  llm_client.py  log_config.py  security.py
lutum/extractor/: __init__.py  content.py
lutum/researcher/: __init__.py  clarify.py  context_state.py  overview.py  pipeline.py  plan.py  scraper.py  search.py
lutum/scrapers/: __init__.py  base.py  (+1 more)
lutum_backend/: main.py
(+49 files in other folders)
